# AiogramAlchemyTemp

./: README.md  comand  docker-compose.yml  example_env  example_env.py  main_pulling.py  pyproject.toml  requirements.txt
bot/: bot_utils.py  config.py  database.py  log.txt  main.py  main_pulling.py
bot/dao/: base.py  database.py  database_middleware.py
bot/migration/versions/: 1b164673151e_initial_revision.py
bot/users/: models.py  router.py  schemas.py
migration/: env.py
