[project]
name = "aiogramalchemytemp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiogram>=3.21.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.15",
    "aiosignal>=1.4.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "annotated-types>=0.7.0",
    "async-timeout>=5.0.1",
    "asyncpg>=0.30.0",
    "attrs>=25.3.0",
    "certifi>=2025.7.14",
    "fastapi>=0.116.1",
    "frozenlist>=1.7.0",
    "greenlet>=3.2.3",
    "idna>=3.10",
    "loguru>=0.7.3",
    "magic-filter>=1.0.12",
    "mako>=1.3.10",
    "markupsafe>=3.0.2",
    "multidict>=6.6.3",
    "propcache>=0.3.2",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "typing-extensions>=4.14.1",
    "yarl>=1.20.1",
]
